--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,36 @@
 @import url(./global.css);
 
+:root {
+  --color-normal: #a6a877;
+  --color-grass: #77c850;
+  --color-fire: #ee7f30;
+  --color-water: #678fee;
+  --color-electric: #f7cf2e;
+  --color-ice: #98d5d7;
+  --color-ground: #dfbf69;
+  --color-flying: #a98ff0;
+  --color-poison: #a040a0;
+  --color-fighting: #bf3029;
+  --color-psychic: #f65687;
+  --color-dark: #725847;
+  --color-rock: #b8a137;
+  --color-bug: #a8b720;
+  --color-ghost: #6e5896;
+  --color-steel: #b9b7cf;
+  --color-dragon: #6f38f6;
+  --color-fairy: #f9aec7;
+  --color-white: #fff;
+  --color-black: #000;
+  --color-opacity: rgba(255, 255, 255, 0.8);
+  --color-bg-modal: rgba(0, 0, 0, 0.7);
+  --color-pagination: #6c79db;
+
+  --font-size-small: 0.625rem;
+  --font-size-medium: 0.9rem;
+  --font-size-large: 1.2rem;
+  --font-size-xlarge: 2rem;
+}
+
 .pokemons {
   display: grid;
   grid-template-columns: 1fr;
@@ -9,96 +40,85 @@
 }
 
 .normal {
-  background-color: #a6a877;
+  background-color: var(--color-normal);
 }
-
 .grass {
-  background-color: #77c850;
+  background-color: var(--color-grass);
 }
-
 .fire {
-  background-color: #ee7f30;
+  background-color: var(--color-fire);
 }
-
 .water {
-  background-color: #678fee;
+  background-color: var(--color-water);
 }
-
 .electric {
-  background-color: #f7cf2e;
+  background-color: var(--color-electric);
 }
-
 .ice {
-  background-color: #98d5d7;
+  background-color: var(--color-ice);
 }
-
 .ground {
-  background-color: #dfbf69;
+  background-color: var(--color-ground);
 }
-
 .flying {
-  background-color: #a98ff0;
+  background-color: var(--color-flying);
 }
-
 .poison {
-  background-color: #a040a0;
+  background-color: var(--color-poison);
 }
-
 .fighting {
-  background-color: #bf3029;
+  background-color: var(--color-fighting);
 }
-
 .psychic {
-  background-color: #f65687;
+  background-color: var(--color-psychic);
 }
-
 .dark {
-  background-color: #725847;
+  background-color: var(--color-dark);
 }
-
 .rock {
-  background-color: #b8a137;
+  background-color: var(--color-rock);
 }
-
 .bug {
-  background-color: #a8b720;
+  background-color: var(--color-bug);
 }
-
 .ghost {
-  background-color: #6e5896;
+  background-color: var(--color-ghost);
 }
-
 .steel {
-  background-color: #b9b7cf;
+  background-color: var(--color-steel);
 }
-
 .dragon {
-  background-color: #6f38f6;
+  background-color: var(--color-dragon);
 }
-
 .fairy {
-  background-color: #f9aec7;
+  background-color: var(--color-fairy);
 }
 
 .pokemon {
   display: flex;
   flex-direction: column;
-  margin: .5rem;
+  margin: 0.5rem;
   padding: 1rem;
   border-radius: 1rem;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.pokemon:hover {
+  transform: scale(1.05);
 }
 
 .pokemon .number {
-  color: #000;
-  opacity: .3;
+  color: var(--color-black);
+  opacity: 0.3;
   text-align: right;
-  font-size: .625rem;
+  font-size: var(--font-size-small);
 }
 
 .pokemon .name {
   text-transform: capitalize;
-  color: #fff;
-  margin-bottom: .25rem;
+  color: var(--color-white);
+  margin-bottom: 0.25rem;
 }
 
 .pokemon .detail {
@@ -115,10 +135,10 @@
 }
 
 .pokemon .detail .types .type {
-  color: #fff;
-  padding: .25rem .5rem;
-  margin: .25rem 0;
-  font-size: .625rem;
+  color: var(--color-white);
+  padding: 0.25rem 0.5rem;
+  margin: 0.25rem 0;
+  font-size: var(--font-size-small);
   border-radius: 1rem;
   filter: brightness(1.1);
   text-align: center;
@@ -139,29 +159,243 @@
 }
 
 .pagination button {
-  padding: .25rem .5rem;
-  margin: .25rem 0;
-  font-size: .625rem;
-  color: #fff;
-  background-color: #6c79db;
+  padding: 0.25rem 0.5rem;
+  margin: 0.25rem 0;
+  font-size: var(--font-size-small);
+  color: var(--color-white);
+  background-color: var(--color-pagination);
   border: none;
   border-radius: 1rem;
 }
 
 @media screen and (min-width: 380px) {
   .pokemons {
-      grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media screen and (min-width: 576px) {
   .pokemons {
-      grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
 @media screen and (min-width: 992px) {
   .pokemons {
-      grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
   }
+}
+
+
+
+/* Estilos do modal de detalhes */
+#pokemonDetail {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: var(--color-bg-modal);
+  z-index: 1000;
+  padding: 1rem;
+  overflow-y: scroll; /* Permite rolagem vertical */
+
+}
+
+#pokemonDetail.open {
+  display: block; /* Mudado para block ao invés de flex */
+  padding: 0; /* Remove padding do container principal */
+}
+.pokemon-detail {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  max-width: 425px;
+  min-height: min-content; /* Altura mínima baseada no conteúdo */
+  padding: 2rem;
+  border-radius: 1rem;
+  color: var(--color-white);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  margin: 2rem auto; /* Centraliza o card e adiciona espaço no topo e base */
+}
+
+.close-button {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  background: rgba(255, 255, 255, 0.3);
+  border: none;
+  color: var(--color-white);
+  font-size: 1.5rem;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s;
+}
+
+.close-button:hover {
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.detail-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 2rem;
+}
+
+.detail-header .name {
+  color: var(--color-white);
+  margin: 0;
+  text-transform: capitalize;
+  font-size: var(--font-size-xlarge);
+}
+
+.detail-header .number {
+  color: var(--color-opacity);
+  font-size: var(--font-size-large);
+  margin-top: 2rem;
+}
+
+.pokemon-detail .types {
+  display: flex;
+  gap: 0.5rem;
+  padding: 0;
+  margin: 0.5rem 0 0;
+  list-style: none;
+  filter: brightness(1.1);
+}
+
+.detail-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  background: rgba(255, 255, 255, 0.1);
+  padding: 1.5rem;
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+}
+
+.pokemon-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pokemon-image img {
+  width: 100%;
+  max-width: 200px;
+  height: auto;
+  z-index: 99;
+}
+
+.pokemon-info {
+  color: var(--color-white);
+}
+
+.basic-info {
+  background: rgba(255, 255, 255, 0.158);
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  margin-bottom: 1rem;
+  margin-top: -2rem;
+}
+
+.basic-info p {
+  margin: 0.5rem 0;
+  font-size: 0.9rem;
+}
+
+.stats-info {
+  margin-top: 1.5rem;
+}
+
+.stats-info h3 {
+  margin: 0 0 1rem 0;
+  color: var(--color-white);
+}
+
+.stat-row {
+  margin: 0.5rem 0;
+}
+
+.stat-name {
+  text-transform: capitalize;
+  display: block;
+  margin-bottom: 0.25rem;
+  font-size: var(--font-size-medium);
+}
+
+@keyframes fillStat {
+  from {
+    width: 0%;
+  }
+  to {
+    width: var(--final-width); /* Variável para a largura final */
+  }
+}
+
+.stat-bar {
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
+.stat-fill {
+  background: rgba(255, 255, 255, 0.8);
+  color: var(--color-black);
+  padding: 0.25rem 0.5rem;
+  text-align: right;
+  font-size: 0.8rem;
+  font-weight: bold;
+  width: 0; /* Começa em 0% */
+  transition: width 0.3s ease; /* Para transição suave */
+}
+
+.stat-fill.animate {
+  animation: fillStat 1s forwards; /* Aplica a animação */
+}
+
+body.modal-open {
+  overflow: hidden;
+}
+
+@media (max-width: 425px) {
+  .detail-content {
+      grid-template-columns: 1fr;
+      gap: 1rem;
+  }
+
+  .pokemon-image img {
+      max-width: 180px;
+      margin: 0 auto;
+  }
+
+  .pokemon-detail {
+    margin: 1rem auto; /* Reduz a margem em telas menores */
+      padding: 1.5rem;
+  }
+
+  .detail-header .name {
+      font-size: 1.5rem;
+  }
+}
+.type {
+  padding: .5rem;
+  border-radius: 20px;
+}
+@media (min-width: 426px) {
+  .basic-info {
+    background: rgba(255, 255, 255, 0.158);
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    margin-top: auto;
+    margin-left: -11rem;
+  }
+
 }
